# mxnet

./: .gitignore  .gitmodules  .licenserc.yaml  BUG_AUDIT.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CUDA_GRAPHS_PLAN.md  CUDA_GRAPHS_PROGRESS.md  FIXED.md  FOLLOW_UPS.md  OPEN_ISSUES.md  OPEN_ISSUES_DETAILS.md  PERFORMANCE_NOTES.md  README.md  a15_reshape_followup.md  amp_subgraph_fix.md  apache_issues_review.md  b8_cpu_inference_bench.md  bench_cpu_inference_b8.py  bench_cublaslt.py  bench_cublaslt_dtypes.py  bench_cudnn_sweep.py  bench_fp16_mxnet.py  bench_fp16_mxnet_vs_pytorch.py  bench_fp16_pytorch.py  bench_gpu_storage_pool.py  bench_sparse_thrust3.py  bench_tf32_conv.py  bugreport.md  bugreport_gluon_data.md  conftest.py  cublaslt_pr_a.md  cublaslt_scope.md  cudnn_autotune_v9.md  cudnn_bump.md  d2l-mxnet-issues.md  d2l-ssd-bug.md  engine_deadlock_audit.md  fp16_perf_bench.md  (+19 more)
.github/workflows/: apple-silicon.yml  build-cpu.yml  docs-deploy.yml  greetings.yml  lint.yml  (+9 more)
.investigations/: apache_open_issue_repros.md  d2l_findings_summary.md  fu11_d2l_rnn_stack_repro.py  nonzero_where_coldstart_deadlock.md
ci/: test_util.py  util.py
config/: darwin.cmake  linux.cmake  linux_gpu.cmake
d2l-diagnostics/: .gitignore
d2l-issues/: THREADING-AND-OOM-BUG-LOG.md  repro_aug_chain.py  repro_full_notebook_CRASH.py  repro_identity_xform_PASS.py  repro_scratch_only_PASS.py  repro_two_trainings_cpu_transfer_PASS.py  repro_two_trainings_random_tensors_PASS.py  repro_two_trainings_real_dataloader_CRASH.py  repro_two_trainings_synthetic_dataloader_PASS.py  repro_two_trainings_with_eval_PASS.py
docs/: README.md  cuda_wheel_build.md
python/: MANIFEST.in  setup.py
src/: base.cc  initialize.cc  libinfo.cc  resource.cc
tests/: CMakeLists.txt  run_unit_test_shards.sh.in
tests/cpp/: test_main.cc
tests/cpp/engine/: omp_test.cc  threaded_engine_invariants_test.cc  threaded_engine_test.cc
tests/cpp/executor/: c_api_cached_op_test.cc  c_api_symbol_test.cc  cpp_executor_test.cc
tests/cpp/include/: test_core_op.h  test_dnnl.h  test_legacy_op.h  test_util.h
tests/cpp/kvstore/: kvstore_dist_server_test.cc
tests/cpp/misc/: base.cc  tricky_bug_test.cc
tests/cpp/operator/: batchnorm_test.cc  dnnl_operator_test.cc  dnnl_test.cc  image_crop_test.cc  sequence_reverse_test.cc  topk_test.cc  unique_sample_test.cc
tests/nightly/: test_np_random.py
tests/nightly/estimator/: test_sentiment_rnn.py
tests/python/: apple_silicon_cpu_smoke  conftest.py  test_quantization_gpu.py
tests/python/array-api/: test_data_interchange.py
tests/python/dnnl/: dnnl_test_utils.py  test_a1_5d_conv_reorder.py  test_amp.py  test_amp_fp16_fallback.py  test_b8_conv_dispatch.py  test_batch_dot_attention_regression.py  test_bf16_operator.py  test_dnnl.py  test_dnnl_layer_norm.py  test_fu11_large_stack_concat.py  test_fu1_int8_ic_lt8_gate.py  test_quantization_dnnl.py  test_xop18_quantized_subgraph_req.py  test_xop19_masked_softmax_req.py  test_xop19_onednn_req.py  test_xop7_dnnl_deconv_req.py
tests/python/dnnl/subgraphs/: subgraph_common.py  test_conv_subgraph.py  test_fc_subgraph.py  test_matmul_subgraph.py  test_quantized_backward.py
tests/python/gpu/: bench_cuda_graphs.py  cublaslt_drift.py  test_amp.py  test_amp_init.py  test_amp_weight_cache.py  test_api_output_memory_leak.py  test_b7_multithread_pool.py  test_batch_dot_fp16_parity.py  test_batchnorm_running_stats.py  test_bf16_conversion.py  test_bf16_gpu_ops.py  test_cublaslt_fc.py  test_cublaslt_gemm.py  test_cublaslt_gemm_dtypes.py  test_cublaslt_strided.py  test_cuda_graphs_replay.py  test_cudnn_frontend_no_plan_fallback.py  test_d2l_argmax_size_one_axis_regression.py  test_d2l_bug_2_gpu_oom_retry.py  test_deconv_tf32.py  test_embedding_backward_nan.py  test_event_pool_recycling_gpu.py  test_extensions_gpu.py  test_freshfix_regressions.py  test_fu4_fork_safe_dnnl.py  test_fusion.py  test_gluon_gpu.py  test_gluon_model_zoo_gpu.py  test_gluon_transforms.py  test_kvstore_gpu.py  test_kvstore_single_machine.py  test_linalg_reduce_safety_gpu.py  test_linalg_temp_sync.py  test_nccl.py  test_nccl_multiproc.py  test_nccl_singleproc.py  test_numpy_fallback.py  test_operator_gpu.py  test_perdevice_image_pipeline.py  test_pool_dynamic_shape.py  (+5 more)
tests/python/onnx/: test_export_opset.py  test_operators.py
tests/python/profiling/: test_nvtx.py
tests/python/quantization/: test_quantization.py  test_xop16_quantized_embedding_storage.py
tests/python/unittest/: common.py  test_apache_open_issue_repros.py  test_api_output_ownership.py  test_apple_silicon_onednn_fallback.py  test_autograd.py  test_base.py  test_ci_util_resources.py  test_concurrency_lifetime_source.py  test_contrib_control_flow.py  test_contrib_gluon_data_vision.py  test_contrib_io.py  test_contrib_operator.py  test_contrib_optimizer.py  test_cpp_inference_get_model_resources.py  test_cuda_arch_policy.py  test_cuda_runtime.py  test_d2l_lr_scheduler_epoch_size.py  test_d2l_opencv_image_io_regression.py  test_d2l_packaging_regression.py  test_d2l_storage_banner_suppression.py  test_d2l_trainer_rescale_semantics.py  test_d2l_zero_dim_dnnl_regression.py  test_deferred_compute.py  test_dependency_build_tools.py  test_dgl_graph.py  test_engine.py  test_engine_shutdown.py  test_exc_handling.py  test_executor.py  test_extensions.py  test_fast_reductions.py  test_freshfix_frontend.py  test_fs12_np_shape_bus_error_repro.py  test_fs13_skip_reason_tracker_id.py  test_gh1_dockerfile_and_workflow_hardening.py  test_gh6_dataset_edge_cases.py  test_gluon.py  test_gluon_batch_processor.py  test_gluon_data.py  test_gluon_estimator.py  (+61 more)
tests/utils/notebook_test/: __init__.py
tools/: build_cleanup_wheel.sh  diagnose.py  im2rec.py  ipynb2md.py  kill-mxnet.py  pytest_gpu_shard_plugin.py  rec2idx.py  release_cuda_wheel.sh  release_provenance.py  run_fp16_remote_smoke.sh  run_gpu_shards.sh  run_macos_wheel_full_test.sh  run_pytest_gpu_lane.py  run_pytest_limited_threads.py  run_wheel_full_test.sh
(+619 files in other folders)
